--- a/application.yml
+++ b/application.yml
@@ -21,7 +21,8 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://admin:a2portais@localhost:8761/eureka/
+        defaultZone: http://admin:a2portais@tomcat.a2portais.com.br:8761/eureka/
+      #defaultZone: http://admin:a2portais@localhost:8761/eureka/
 
 # Enable /management/logfile endpoint for all apps
 logging:
