--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,7 @@
 # Common configuration shared between all applications
 configserver:
   name: Juninho.com.br (Influenzer, Wok) Docker JHipster Registry Config Server
-  status: Connected to the JHipster Registry config server, using https://git.juninho.com.br/mundo-do-codigo/jhipster-registry-a2config-config/-/edit/master/application.yml
+  status: Connected to the JHipster Registry config server, using https://git.juninho.com.br/
 
 # Default JWT secret token (to be changed in production!)
 jhipster:
@@ -14,9 +14,9 @@ spring:
     user:
       password: admin
 eureka:
-  client:
-    service-url:
-      defaultZone: http://admin:admin@registro.juninho.com.br:8761/eureka/
+  #client:
+    #service-url:
+      #defaultZone: http://admin:admin@registro.juninho.com.br:8761/eureka/
       #defaultZone: http://admin:a2portais@localhost:8761/eureka/
 
 # Enable /management/logfile endpoint for all apps
