--- a/application.yml
+++ b/application.yml
@@ -14,12 +14,12 @@ spring:
     user:
       password: admin
 eureka:
-  #client:
-    #service-url:
-      #defaultZone: http://admin:admin@registro.juninho.com.br:8761/eureka/
+  client:
+    service-url:
+      defaultZone: http://admin:admin@registro.juninho.com.br:8761/eureka/
       #defaultZone: http://admin:a2portais@localhost:8761/eureka/
 
 # Enable /management/logfile endpoint for all apps
 logging:
-  path: /dados/apps/jhipster-registry/log
+  path: /dados/apps/log-jhipster/
   file: ${spring.application.name}.log
